ringringtonesdir = $(datadir)/ring/ringtones
dist_ringringtones_DATA = \
	01_AfroNigeria.opus \
	02_AfroNigeria.opus \
	03_AcousticGuitar.opus \
	04_ElectricGuitar.opus \
	05_AcousticIndia.opus \
	06_RingSoft.opus \
	07_RingTribal.opus \
	08_RingFirefly.opus \
	09_ElectroCloud.opus \
	10_UrbanTrap.opus \
	default.opus