ringringtonesdir = $(datadir)/ring/ringtones
dist_ringringtones_DATA = \
	01\ AfroNigeria.opus \
	02\ AfroNigeria.opus \
	03\ AcousticGuitar.opus \
	04\ ElectricGuitar.opus \
	05\ AcousticIndia.opus \
	06\ RingSoft.opus \
	07\ RingTribal.opus \
	08\ RingFirefly.opus \
	09\ ElectroCloud.opus \
	10\ UrbanTrap.opus \
	default.opus